src/output/human/snapshots/grip__output__human__tests__chain_and_telemetry_panels_appear.snap
---
source: src/output/human/mod.rs
expression: s
---
  grip  ·  live handshake  example.com:443 ──────────────────────────────────────────────────────

  negotiated ───────────────────────────────────────────────────────────────────────────────────────
    tls version      TLS 1.3
    cipher suite     TLS_AES_128_GCM_SHA256  0x1301
    key exchange     X25519
    alpn             h2
    sni              example.com  hostname
    offered          TLS 1.3 · TLS 1.2

  certificate ──────────────────────────────────────────────────────────────────────────────────────
    subject          CN=example.com
    issuer           C=US, O=DigiCert, CN=DigiCert Global G3
    sans             example.com  www.example.com  cdn.example.com  +1 more
    expires          2026-11-15 (77 days)
    sha-256          a83fc1449e02bb71
    ct logs          2 scts embedded
    chain 1          CN=example.com
                     └─ a83fc1449e02bb71

  fingerprints ─────────────────────────────────────────────────────────────────────────────────────
    ja3              cd08e31494f9531f560d64c695473da9
    ja4              t13d1516h2_8daaf6152771_02713d6af862
    ja4s             t13d020000_1301_1acd28cc39f1
    client           Chromium Browser

  telemetry ────────────────────────────────────────────────────────────────────────────────────────
    handshake        42 ms
    bytes            204 out  95 in
    grease           2 filtered
    resolved         93.184.216.34:443

  ◆  42 ms
