src/output/human/snapshots/grip__output__human__tests__missing_certificate_explains_itself.snap
---
source: src/output/human/mod.rs
expression: s
---
  grip  ·  live handshake  example.com:443 ──────────────────────────────────────────────────────

  negotiated ───────────────────────────────────────────────────────────────────────────────────────
    tls version      TLS 1.3
    cipher suite     TLS_AES_128_GCM_SHA256  0x1301
    key exchange     X25519
    alpn             h2
    sni              example.com  hostname
    offered          TLS 1.3 · TLS 1.2

  certificate ──────────────────────────────────────────────────────────────────────────────────────
    status           not recovered
                     tls 1.3 encrypts the certificate message; the verified fallback also failed —
                     retry with --no-verify

  fingerprints ─────────────────────────────────────────────────────────────────────────────────────
    ja3              cd08e31494f9531f560d64c695473da9
    ja4              t13d1516h2_8daaf6152771_02713d6af862
    ja4s             t13d020000_1301_1acd28cc39f1
    client           Chromium Browser
