src/output/human/snapshots/grip__output__human__tests__pcap_table_is_ranked_and_plain.snap
---
source: src/output/human/mod.rs
expression: s
---
  grip  ·  pcap analysis  capture.pcap
  ────────────────────────────────────────────────────────────────────

  ╭─ summary ────────────────────────────────────────────────────────╮
  │  clients          2                                              │
  │  handshakes       29                                             │
  ╰──────────────────────────────────────────────────────────────────╯

      source          ja4                                    client         seen
  ────────────────────────────────────────────────────────────────────
   1  192.168.1.5     t13d1516h2_8daaf6152771_e5627ecdbbe6   Chrome 120     ▰▰▰▰▰▰▰▰▰▰   23
   2  10.0.0.42       t10d1200h_c013c014c00a_a2a4a5a6a7a8    unclassified   ▰▰▱▱▱▱▱▱▱▱    6

  ────────────────────────────────────────────────────────────────────
  ◆  2 unique fingerprints
